--- a/CaptionMetrics/使用说明.md
+++ b/CaptionMetrics/使用说明.md
@@ -9,6 +9,9 @@ fork from https://github.com/wangleihitcs/CaptionMetrics
 1. byte和str的转换问题，所以在存取操作要有一组对应的encode和decode处理
 2. 子进程subprocess .stdout.readline() 卡死，设置subprocess的bufsize是0即可。
 
-
 # 说明
 1. stanford-corenlp-3.6.0-models.jar由于太大，未放在其中，按照readme里面，再去下一下。
+
+# todo
+1. 封装成docker
+2. 和实际评测程序结合
