--- a/CaptionMetrics/使用说明.md
+++ b/CaptionMetrics/使用说明.md
@@ -11,6 +11,7 @@ fork from https://github.com/wangleihitcs/CaptionMetrics
 
 # 说明
 1. stanford-corenlp-3.6.0-models.jar由于太大，未放在其中，按照readme里面，再去下一下。
+2. Spice下算法未使用，已删除
 
 # todo
 1. 封装成docker
